# AutoTasks

./: .gitignore  Pipfile  README.md  TODO.txt  chat_test.py  pyproject.toml  steps_to_dockerize
AutoTasks/: manage.py
AutoTasks/AutoTasks/: asgi.py  settings.py  urls.py  wsgi.py
AutoTasks/api/: api_views.py  urls.py
AutoTasks/chat/: chat_test.py  secrets_manager.py
AutoTasks/reminders/: api_views.py  models.py  serializers.py  utils.py
AutoTasks/user/: authentication.py  models.py
AutoTasks_backend/: Dockerfile  celerybeat-schedule.db  docker-compose.yml  init_db.sh  manage.py  pyproject.toml
AutoTasks_backend/AutoTasks/: asgi.py
AutoTasks_backend/AutoTasks_backend/: __init__.py  celery.py  secrets_manager.py  settings.py  urls.py  wsgi.py
AutoTasks_backend/Scripts/: discord_bot.py
AutoTasks_backend/api/: api_views.py  urls.py  utils.py
AutoTasks_backend/chat/: chat_test.py  gpt_tools.py  models.py  prompt.py  steps_to_dockerize  utils.py
AutoTasks_backend/chat/migrations/: 0001_initial.py  0002_initial.py
AutoTasks_backend/nginx/: django_project.conf
AutoTasks_backend/reminders/: models.py  tasks.py
AutoTasks_backend/reminders/management/commands/: setup_periodic_tasks.py
AutoTasks_backend/reminders/migrations/: 0001_initial.py  0002_initial.py  0003_reminder_notified.py
AutoTasks_backend/user/: authentication.py  models.py
AutoTasks_backend/user/migrations/: 0001_initial.py  0002_alter_user_managers.py  0002_user_is_deleted.py
